maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:25: error: ':' expected but ')' found.
  def keepHandOnSideWall(etat)  {
                             ^IslandMaze:49: error: identifier expected but '}' found.
}
^IslandMaze:53: error: Unmatched closing brace '}' ignored here
}
^